[iOS] Fix build breakage from r291361 https://bugs.webkit.org/show_bug.cgi?id=238043 rdar://90447279

Unreviewed build fix.


* platform/ios/WebAVPlayerController.mm: Declare AVMetadataItem.



Canonical link: https://commits.webkit.org/248562@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291438 268f45cc-cd09-0410-ab3c-d52691b4dbfc